# Translation_hindi_gujrati_sanskrit_ocr

./: .gitignore  README.md  deploy.sh  layout.html  main.py  nginx.conf  pdf_ocr.service  pyproject.toml  run.py  schema.sql  test_ocr_output.txt
app/: __init__.py
app/api/: routes.py
app/models/: database.py
app/services/: context_manager.py  distributed_processor.py  document_chunker.py  ocr_service.py  pdf_service.py  processing_queue.py  production_pipeline.py  rate_limit_controller.py  translation_service.py
app/static/css/: style.css
app/templates/: 404.html  500.html  base.html  loginpage.html  pdf_library.html  stats.html
config/: large_document_config.py  settings.py
old_code/: app.py  config.py  database.py  file_utils.py  model.py
tests/: check_db_full.py  check_db_output.txt  test_db.py  test_indic_ocr.py  test_large_pipeline.py  test_paddle.py  test_translation.py
